--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,11 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+body::before {
+  display: block;
+  content: '';
+  height: 50px;
+}
+
+@media (min-width: 768px) {
+  .news-input {
+    width: 50%;
+  }
 }
